getting somewhere slowly with react-autocomplete

--- a/demo/tc-ui/browser/main.css
+++ b/demo/tc-ui/browser/main.css
@@ -312,7 +312,8 @@ aside.biz-ops-aside {
 	position: relative;
 }
 
-.awesomplete [role='listbox'] {
+.awesomplete [role='listbox'],
+.autocomplete__list {
 	box-shadow: 1px 1px 5px #ccc;
 	background: white;
 	z-index: 2;
@@ -322,7 +323,8 @@ aside.biz-ops-aside {
 }
 
 .editable-relationships,
-.awesomplete [role='listbox'] {
+.awesomplete [role='listbox'],
+.autocomplete__list {
 	list-style-type: none;
 	margin: 0;
 	padding-left: 0;
@@ -338,24 +340,30 @@ aside.biz-ops-aside {
 }
 
 /* important rules are to clobber o-typography */
-.awesomplete [role='listbox'] li {
+.awesomplete [role='listbox'] li,
+.autocomplete__list li {
 	padding: 0.5em !important;
 	color: #0d7680;
 	cursor: pointer;
 }
 
-.awesomplete [role='listbox'] li::before {
+.awesomplete [role='listbox'] li::before,
+.autocomplete__list li::before {
 	display: none !important;
 }
 
 .awesomplete [role='listbox'] li[aria-selected='true'],
 .awesomplete [role='listbox'] li:hover,
-.awesomplete [role='listbox'] mark {
+.awesomplete [role='listbox'] mark,
+.autocomplete__list li[aria-selected='true'],
+.autocomplete__list li:hover,
+.autocomplete__list mark {
 	color: #08474d;
 	background: #cfe4e6;
 }
 
-.o-forms-input .suggest:not([disabled]) {
+.o-forms-input .suggest:not([disabled]),
+.autocomplete__input:not([disabled]) {
 	background-image: url('https://www.ft.com/__origami/service/image/v2/images/raw/fticon-v1:search?source=o-icons&tint=%2333302E,%2333302E&format=svg');
 	background-repeat: no-repeat;
 	background-position-x: right;
