--- a/demo/tc-ui/browser/main.css
+++ b/demo/tc-ui/browser/main.css
@@ -382,6 +382,10 @@ aside.biz-ops-aside {
 	background: var(--o-colors-wasabi);
 }
 
+.o-forms-input__error {
+	position: static !important;
+}
+
 [data-page-type='api-explorer'] .o-layout__main {
 	margin-top: 0;
 }
