--- a/packages/tc-ui/src/main.css
+++ b/packages/tc-ui/src/main.css
@@ -27,7 +27,7 @@ aside.biz-ops-aside {
 }
 
 .biz-ops-help-icon {
-	vertical-align: sub;
+	vertical-align: middle;
 	width: 30px !important;
 	height: 30px !important;
 }
