--- a/packages/tc-ui/src/main.css
+++ b/packages/tc-ui/src/main.css
@@ -1,5 +1,5 @@
 /* headings */
-.biz-ops-section-header__edit-link {
+.treecreeper-section-header__edit-link {
 	width: 32px;
 	height: 32px;
 	vertical-align: top;
@@ -11,7 +11,7 @@
 	margin-bottom: 20px;
 }
 
-aside.biz-ops-aside {
+aside.treecreeper-aside {
 	border-left: none;
 }
 
@@ -21,12 +21,12 @@ aside.biz-ops-aside {
 	max-width: 50%;
 }
 
-.biz-ops-help {
+.treecreeper-help {
 	display: inline-block;
 	margin-left: 5px;
 }
 
-.biz-ops-help-icon {
+.treecreeper-help-icon {
 	vertical-align: sub;
 	width: 30px !important;
 	height: 30px !important;
@@ -34,16 +34,16 @@ aside.biz-ops-aside {
 
 /* buttons */
 
-.biz-ops-cta {
+.treecreeper-cta {
 	float: right;
 	margin-left: 8px;
 }
 
-.biz-ops-cta--link-style-override {
+.treecreeper-cta--link-style-override {
 	border: 1px solid black !important;
 }
 
-.biz-ops-cta-container--sticky {
+.treecreeper-cta-container--sticky {
 	position: sticky;
 	top: 10px;
 	z-index: 1;
