--- a/packages/tc-ui/src/pages/view/main.css
+++ b/packages/tc-ui/src/pages/view/main.css
@@ -1,46 +1,46 @@
 /* view page */
 /* classes used in a lot of legacy free-text fields*/
 
-.biz-ops-properties-list {
+.treecreeper-properties-list {
 	margin-bottom: 0;
 }
 
-.biz-ops-properties-list dt {
+.treecreeper-properties-list dt {
 	font-weight: 600;
 	margin-bottom: 0.25rem;
 }
 
-.biz-ops-properties-list dd.inline > *:last-child {
+.treecreeper-properties-list dd.inline > *:last-child {
 	margin-bottom: 0;
 }
 
-.biz-ops-properties-list dd {
+.treecreeper-properties-list dd {
 	margin-left: 0;
 	margin-bottom: 1rem;
 }
 
 @media (min-width: 450px) {
-	.biz-ops-properties-list {
+	.treecreeper-properties-list {
 		display: grid;
 		grid-template-columns: 200px 1fr;
 		grid-column-gap: 1rem;
 		margin-bottom: 0;
 	}
 
-	.biz-ops-properties-list dt.inline {
+	.treecreeper-properties-list dt.inline {
 		grid-column: 1/2;
 	}
-	.biz-ops-properties-list dd.inline {
+	.treecreeper-properties-list dd.inline {
 		grid-column: 2/3;
 	}
-	.biz-ops-properties-list .inline {
+	.treecreeper-properties-list .inline {
 		margin-bottom: 1rem;
 	}
 
-	.biz-ops-properties-list dt.block {
+	.treecreeper-properties-list dt.block {
 		grid-column: 1/3;
 	}
-	.biz-ops-properties-list dd.block {
+	.treecreeper-properties-list dd.block {
 		grid-column: 1/3;
 	}
 }
@@ -60,12 +60,12 @@
 	max-width: 100%;
 }
 
-.biz-ops-links {
+.treecreeper-links {
 	list-style-type: none;
 	padding-left: 0;
 	margin-top: 0;
 }
-.biz-ops-links li {
+.treecreeper-links li {
 	margin-bottom: 0.5em;
 }
 
