improve rich-relationship component based on feedback

--- a/packages/tc-ui/src/primitives/relationship/main.css
+++ b/packages/tc-ui/src/primitives/relationship/main.css
@@ -115,11 +115,11 @@
 .relationship-remove-button,
 .relationship-annotate-button {
 	min-width: 60px;
-	width: 70px;
 }
 
 .relationship-annotate-button {
 	margin-left: 0.5em;
+	margin-right: 0 !important;
 }
 
 .relationship-remove-button {
