--- a/packages/tc-ui/src/primitives/relationship/main.css
+++ b/packages/tc-ui/src/primitives/relationship/main.css
@@ -147,3 +147,24 @@
 	height: 0.9em !important;
 	padding-top: 0.1em;
 }
+
+.treecreeper-relationship-annotate span.o-forms-input--checkbox {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.treecreeper-relationship-annotate__tooltip {
+	max-width: 30%;
+}
+
+.treecreeper-relationship-annotate .o-icons-icon--info {
+	width: 1.6em !important;
+	height: 1.6em !important;
+	vertical-align: bottom;
+	margin-right: 1em;
+}
+
+.treecreeper-relationship-annotate .o-forms-input--inline label {
+	max-width: 100%;
+	margin-right: 0;
+}
