--- a/packages/tc-ui/src/primitives/relationship/main.css
+++ b/packages/tc-ui/src/primitives/relationship/main.css
@@ -153,18 +153,22 @@
 	grid-template-columns: 50% 50%;
 }
 
-.treecreeper-relationship-annotate__tooltip {
+.treecreeper-enum__tooltip {
 	max-width: 30%;
 }
 
-.treecreeper-relationship-annotate .o-icons-icon--info {
+.treecreeper-relationship-annotate .o-forms-input--checkbox label {
+	max-width: 100%;
+	margin-right: 0;
+}
+
+[data-treecreeper-component='enum'] .tooltip-container {
+	display: inline;
+}
+
+[data-treecreeper-component='enum'] .o-icons-icon--info {
 	width: 1.6em !important;
 	height: 1.6em !important;
 	vertical-align: bottom;
 	margin-right: 1em;
-}
-
-.treecreeper-relationship-annotate .o-forms-input--inline label {
-	max-width: 100%;
-	margin-right: 0;
 }
