--- a/demo/cms/browser/main.css
+++ b/demo/cms/browser/main.css
@@ -148,3 +148,9 @@
 	width: 100%;
 	height: 100%;
 }
+
+.decommission-override {
+	display: flex;
+	justify-content: space-between;
+	max-width: 450px;
+}
